DDD/AGRoot apply thumbnail/contentimgs entity and remain service class + adminproductservice refactoring 26/04/22