@@ -7,13 +7,12 @@ import JOO.jooshop.categorys.entity.Category;
 import JOO.jooshop.contentImgs.entity.ContentImages;
 import JOO.jooshop.contentImgs.entity.enums.UploadType;
 import JOO.jooshop.contentImgs.repository.ContentImagesRepository;
-import JOO.jooshop.contentImgs.service.ContentImgService;
 import JOO.jooshop.global.file.FileStorageService;
 import JOO.jooshop.product.entity.Product;
 import JOO.jooshop.product.entity.ProductColor;
 import JOO.jooshop.productManagement.entity.ProductManagement;
 import JOO.jooshop.productManagement.entity.enums.Size;
-import JOO.jooshop.productManagement.repository.ProductManagementRepository;
+import JOO.jooshop.thumbnail.entity.ProductThumbnail;
 import JOO.jooshop.thumbnail.service.ThumbnailService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -23,7 +22,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -31,45 +29,18 @@ import java.util.stream.Collectors;
 @Transactional
 public class AdminProductService {
 
-    private final ThumbnailService thumbnailService;
-    private final ContentImgService contentImgService;
     private final AdminProductRepository productRepository;
-    private final ProductManagementRepository productManagementRepository;
-
+    private final ThumbnailService thumbnailService;
     private final ContentImagesRepository contentImagesRepository;
     private final FileStorageService fileStorageService;
 
-    /* =========================
-       Query
-    ========================= */
-
     @Transactional(readOnly = true)
     public List<AdminProductResponseDto> findAllProduct() {
-        // findAll -> ForAdminList, jpa 기본 메서드 지양(n+1, 과부화 방지)
-        return productRepository.findAllForAdminList() // 1. 조회
+        return productRepository.findAllByOrderByCreatedAtDesc()
                 .stream()
-                .map(this::toResponseDto)              // 2. 변환
-                .collect(Collectors.toList());         // 3. 수집
+                .map(this::toResponseDto)
+                .toList();
     }
-
-    private AdminProductResponseDto toResponseDto(Product product) {
-        String thumbnailUrl = thumbnailService.pickRepresentativeThumbnailUrl(product);
-
-        return new AdminProductResponseDto(
-                product.getProductId(),
-                product.getProductName(),
-                product.getProductType(),
-                product.getPrice(),
-                product.getDiscountRate(),
-                product.getProductInfo(),
-                thumbnailUrl,
-                product.getCreatedAt()
-        );
-    }
-
-    /* =========================
-       Command (create / update)
-    ========================= */
 
     public AdminProductResponseDto createProduct(
             AdminProductRequestDto dto,
@@ -78,18 +49,50 @@ public class AdminProductService {
     ) {
         dto.normalizeAndValidate();
 
-        Product product = new Product(dto);
-        Product saved = productRepository.save(product);
+        Product product = Product.create(
+                dto.getProductName(),
+                dto.getProductType(),
+                dto.getPrice(),
+                dto.getProductInfo(),
+                dto.getManufacturer(),
+                dto.getIsDiscount(),
+                dto.getDiscountRate(),
+                dto.getIsRecommend()
+        );
 
-        replaceOptions(saved, dto.getOptions());
+        if (dto.hasOptionsField()) {
+            product.replaceOptions(toProductManagements(dto.getOptions()));
+        }
+
+        if (dto.getThumbnailUrl() != null && !dto.getThumbnailUrl().isBlank()) {
+            product.addThumbnailPath(dto.getThumbnailUrl());
+        }
+
+        if (dto.getContentUrls() != null && !dto.getContentUrls().isEmpty()) {
+            for (String contentUrl : dto.getContentUrls()) {
+                if (contentUrl != null && !contentUrl.isBlank()) {
+                    product.addContentImagePath(contentUrl, UploadType.PRODUCT);
+                }
+            }
+        }
 
         if (thumbnail != null && !thumbnail.isEmpty()) {
-            thumbnailService.uploadThumbnailImages(saved, thumbnail);
-        }
-        if (contentImages != null && !contentImages.isEmpty()) {
-            contentImgService.uploadContentImages(saved, contentImages, UploadType.PRODUCT);
+            String thumbnailPath = thumbnailService.store(thumbnail);
+            product.clearThumbnails();
+            product.addThumbnailPath(thumbnailPath);
         }
 
+        if (contentImages != null && !contentImages.isEmpty()) {
+            product.clearContentImages();
+            for (MultipartFile contentImage : contentImages) {
+                if (contentImage != null && !contentImage.isEmpty()) {
+                    String contentPath = fileStorageService.storeFile(contentImage);
+                    product.addContentImagePath(contentPath, UploadType.PRODUCT);
+                }
+            }
+        }
+
+        Product saved = productRepository.save(product);
         return toResponseDto(saved);
     }
 
@@ -101,40 +104,69 @@ public class AdminProductService {
     ) {
         dto.normalizeAndValidate();
 
-        Product product = productRepository.findById(id)
+        Product product = productRepository.findWithDetailsByProductId(id)
                 .orElseThrow(() -> new RuntimeException("상품이 존재하지 않습니다."));
 
-        product.updateFromDto(dto);
+        product.changeBasicInfo(
+                dto.getProductName(),
+                dto.getProductType(),
+                dto.getPrice(),
+                dto.getProductInfo(),
+                dto.getManufacturer(),
+                dto.getIsDiscount(),
+                dto.getDiscountRate(),
+                dto.getIsRecommend()
+        );
 
-        replaceOptions(product, dto.getOptions());
+        if (dto.hasOptionsField()) {
+            if (dto.isOptionsClearRequest()) {
+                product.clearOptions();
+            } else {
+                product.replaceOptions(toProductManagements(dto.getOptions()));
+            }
+        }
 
         if (thumbnail != null && !thumbnail.isEmpty()) {
-            thumbnailService.uploadThumbnailImages(product, thumbnail);
+            product.clearThumbnails();
+            String thumbnailPath = thumbnailService.store(thumbnail);
+            product.addThumbnailPath(thumbnailPath);
         }
-        if (contentImages != null && !contentImages.isEmpty()) {
-            contentImgService.uploadContentImages(product, contentImages, UploadType.PRODUCT);
+
+        if (contentImages != null) {
+            product.clearContentImages();
+
+            for (MultipartFile contentImage : contentImages) {
+                if (contentImage != null && !contentImage.isEmpty()) {
+                    String contentPath = fileStorageService.storeFile(contentImage);
+                    product.addContentImagePath(contentPath, UploadType.PRODUCT);
+                }
+            }
         }
 
         return toResponseDto(product);
     }
 
-    private void replaceOptions(Product product, List<AdminProductRequestDto.ProductManagementDto> options) {
-        if (options == null) return; // null이면 변경 없음
+    public void deleteProduct(Long productId) {
+        Product product = productRepository.findWithDetailsByProductId(productId)
+                .orElseThrow(() -> new RuntimeException("상품이 존재하지 않습니다."));
 
-        Long productId = product.getProductId();
+        deleteThumbnailFilesBestEffort(product);
+        deleteContentImageFilesBestEffort(product);
 
-        productManagementRepository.deleteByProductId(productId);
-
-        if (options.isEmpty()) return;
-
-        List<ProductManagement> newOptions = options.stream()
-                .map(opt -> toProductManagement(product, opt))
-                .toList();
-
-        productManagementRepository.saveAll(newOptions);
+        productRepository.delete(product);
     }
 
-    private ProductManagement toProductManagement(Product product, AdminProductRequestDto.ProductManagementDto dto) {
+    private List<ProductManagement> toProductManagements(List<AdminProductRequestDto.ProductManagementDto> options) {
+        if (options == null || options.isEmpty()) {
+            return List.of();
+        }
+
+        return options.stream()
+                .map(this::toProductManagement)
+                .toList();
+    }
+
+    private ProductManagement toProductManagement(AdminProductRequestDto.ProductManagementDto dto) {
         ProductColor color = ProductColor.ofName(dto.getColor());
         Category category = Category.ofName(dto.getCategory());
         Size size = Size.valueOf(dto.getSize());
@@ -148,63 +180,49 @@ public class AdminProductService {
         );
     }
 
-    /* =========================
-       Command (delete) - ✅ 최선
-    ========================= */
+    private AdminProductResponseDto toResponseDto(Product product) {
+        String thumbnailUrl = product.getProductThumbnails().stream()
+                .findFirst()
+                .map(ProductThumbnail::getImagePath)
+                .orElse(null);
 
-    /**
-     * ✅ 최선 정책:
-     * - DB 정리(옵션/이미지/상품)는 반드시 완료한다.
-     * - 파일 삭제는 Best-effort로 시도하고 실패해도 진행한다(로그/추적).
-     * - 이유: 파일 시스템은 DB 트랜잭션 롤백 대상이 아님.
-     */
-    public void deleteProduct(Long productId) {
-        // 0) 상품 존재 확인(없으면 조용히 끝낼지/예외낼지 정책 선택)
-        Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("상품이 존재하지 않습니다."));
-
-        // 1) 옵션 삭제 (FK 안전)
-        productManagementRepository.deleteByProductId(productId);
-
-        // 2) 썸네일 파일 + DB 삭제 (ThumbnailService 내부도 best-effort)
-        thumbnailService.deleteAllThumbnailsByProductId(productId);
-
-        // 3) 상세 이미지 파일 삭제 best-effort + DB 삭제
-        deleteAllContentImagesByProductIdBestEffort(productId);
-
-        // 4) Product 삭제 (DB 정리의 최종 단계)
-        productRepository.delete(product);
+        return AdminProductResponseDto.from(product, thumbnailUrl);
     }
 
-    private void deleteAllContentImagesByProductIdBestEffort(Long productId) {
-        List<ContentImages> imgs = contentImagesRepository.findByProduct_ProductId(productId);
-        if (imgs == null || imgs.isEmpty()) return;
+    private void deleteThumbnailFilesBestEffort(Product product) {
+        product.getProductThumbnails().forEach(thumbnail -> {
+            String path = thumbnail.getImagePath();
+            deleteFileIfLocal(path);
+        });
+    }
 
+    private void deleteContentImageFilesBestEffort(Product product) {
         List<String> failedDeletes = new ArrayList<>();
 
-        for (ContentImages img : imgs) {
-            String path = img.getImagePath();
-            if (path == null || path.isBlank()) continue;
-
-            // 외부 URL은 파일 시스템 삭제 대상 아님(혼재 방어)
-            String t = path.trim();
-            if (t.startsWith("http://") || t.startsWith("https://")) continue;
-
+        for (ContentImages image : product.getContentImages()) {
+            String path = image.getImagePath();
             try {
-                fileStorageService.deleteFile(t);
+                deleteFileIfLocal(path);
             } catch (Exception e) {
-                failedDeletes.add(t);
-                log.error("상세 이미지 파일 삭제 실패: path={}", t, e);
+                failedDeletes.add(path);
+                log.error("상세 이미지 파일 삭제 실패: path={}", path, e);
             }
         }
 
-        // DB는 반드시 정리
-        contentImagesRepository.deleteAllInBatch(imgs);
-
         if (!failedDeletes.isEmpty()) {
-            // 운영 관점: 나중에 청소할 수 있게 한 번 더 요약 로그
             log.warn("[AdminProduct] content image file delete failures. productId={}, count={}, paths={}",
-                    productId, failedDeletes.size(), failedDeletes);
+                    product.getProductId(), failedDeletes.size(), failedDeletes);
         }
+    }
+
+    private void deleteFileIfLocal(String path) {
+        if (path == null || path.isBlank()) return;
+
+        String trimmed = path.trim();
+        if (trimmed.startsWith("http://") || trimmed.startsWith("https://")) {
+            return;
+        }
+
+        fileStorageService.deleteFile(trimmed);
     }
 }
